--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0024.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0024.html
@@ -12,8 +12,7 @@
       <span class="ocr_line" title="bbox 311 177 1313 216">
         <span id="w_0" class="ocr_word" title="bbox 311 177 415 216">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XXn</ins>
-            <del title="nlp 0.90">XXn</del>
+            <ins title="nlp 2.00">XXII</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1048 182 1313 216">
@@ -82,8 +81,7 @@
         </span>
         <span id="w_11" class="ocr_word" title="bbox 576 358 770 413">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">toUetur,</ins>
-            <del title="nlp 0.90">toUetur,</del>
+            <ins title="nlp 2.00">tolletur,</ins>
           </span>
         </span>
         <span id="w_12" class="ocr_word" title="bbox 819 360 854 400">
@@ -182,9 +180,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 314 501 2046 560">
-        <span id="w_29" class="ocr_word" title="bbox 314 501 499 543">
+        <span id="w_29_0" class="ocr_word" title="bbox 314 501 499 543">
           <span class="alternatives">
-            <ins title="nlp 2.00">maiora"</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_29_1" class="ocr_word" title="bbox 314 501 499 543">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">maiora“</ins>
           </span>
         </span>
         <span id="w_30" class="ocr_word" title="bbox 531 501 797 555">
@@ -229,22 +232,12 @@
             <del title="nlp 0.90">ad</del>
           </span>
         </span>
-        <span id="w_37" class="ocr_word" title="bbox 1893 518 2046 560">
-          <span class="alternatives">
-            <ins title="nlp 2.00">augendam</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 317 571 2047 629">
         <span id="w_39" class="ocr_word" title="bbox 449 571 756 629">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aegritudinem</ins>
+            <ins class="alt" title="nlp 2.00">aegritudinem,</ins>
             <del title="nlp 0.90">aegritudinem</del>
-          </span>
-        </span>
-        <span id="w_40" class="ocr_word" title="bbox 766 604 777 626">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
           </span>
         </span>
         <span id="w_41" class="ocr_word" title="bbox 808 573 834 624" lang="grc">
@@ -391,9 +384,14 @@
             <del title="nlp 0.90">quia</del>
           </span>
         </span>
-        <span id="w_66" class="ocr_word" title="bbox 1310 715 1567 770">
+        <span id="w_66_0" class="ocr_word" title="bbox 1310 715 1567 770">
           <span class="alternatives">
-            <ins title="nlp 2.00">repentina."</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_66_1" class="ocr_word" title="bbox 1310 715 1567 770">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">repentina.“</ins>
           </span>
         </span>
         <span id="w_67" class="ocr_word" title="bbox 1626 715 1744 758">
@@ -406,12 +404,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">igitur</ins>
             <del title="nlp 0.90">igitur</del>
-          </span>
-        </span>
-        <span id="w_69" class="ocr_word" title="bbox 1954 731 2049 759">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cum</ins>
-            <del title="nlp 0.90">cum</del>
           </span>
         </span>
       </span>
@@ -530,11 +522,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">fuisse</ins>
             <del title="nlp 0.90">fuisse</del>
-          </span>
-        </span>
-        <span id="w_89" class="ocr_word" title="bbox 1990 858 2051 901">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">in-</ins>
           </span>
         </span>
       </span>
@@ -850,9 +837,9 @@
             <del title="nlp 0.90">necopinato</del>
           </span>
         </span>
-        <span id="w_141" class="ocr_word" title="bbox 1903 1285 2052 1340">
+        <span id="w_141_0" class="ocr_word" title="bbox 1903 1285 2052 1340">
           <span class="alternatives">
-            <ins title="nlp 2.00">malo",</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -912,17 +899,11 @@
         </span>
         <span id="w_151" class="ocr_word" title="bbox 1873 1356 2053 1413">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aegritu-</ins>
+            <ins title="nlp 2.00">aegritudenem</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 324 1424 2056 1483">
-        <span id="w_152" class="ocr_word" title="bbox 324 1425 460 1467">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dinem</ins>
-            <del title="nlp 0.90">aegritudinem</del>
-          </span>
-        </span>
         <span id="w_153" class="ocr_word" title="bbox 505 1425 760 1482">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">augendam;</ins>
@@ -1115,9 +1096,14 @@
             <del title="nlp 0.90">ante</del>
           </span>
         </span>
-        <span id="w_184" class="ocr_word" title="bbox 1003 1638 1193 1681">
+        <span id="w_184_0" class="ocr_word" title="bbox 1003 1638 1193 1681">
           <span class="alternatives">
-            <ins title="nlp 2.00">videris."</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_184_1" class="ocr_word" title="bbox 1003 1638 1193 1681">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">videris.“</ins>
           </span>
         </span>
         <span id="w_185" class="ocr_word" title="bbox 1253 1637 1365 1681">
@@ -1142,12 +1128,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Euripidem</ins>
             <del title="nlp 0.90">Euripidem</del>
-          </span>
-        </span>
-        <span id="w_189" class="ocr_word" title="bbox 2014 1640 2060 1682">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">in</ins>
-            <del title="nlp 0.90">in</del>
           </span>
         </span>
       </span>
@@ -1275,9 +1255,14 @@
             <del title="nlp 0.90">genuisse</del>
           </span>
         </span>
-        <span id="w_210" class="ocr_word" title="bbox 904 1853 1165 1895">
+        <span id="w_210_0" class="ocr_word" title="bbox 904 1853 1165 1895">
           <span class="alternatives">
-            <ins title="nlp 2.00">mortalem."</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_210_1" class="ocr_word" title="bbox 904 1853 1165 1895">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">mortalem.“</ins>
           </span>
         </span>
         <span id="w_211" class="ocr_word" title="bbox 1226 1851 1332 1895">
@@ -1302,12 +1287,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">disputatione</ins>
             <del title="nlp 0.90">disputatione</del>
-          </span>
-        </span>
-        <span id="w_215" class="ocr_word" title="bbox 1940 1853 2060 1895">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">locus</ins>
-            <del title="nlp 0.90">locus</del>
           </span>
         </span>
       </span>
@@ -1385,8 +1364,7 @@
         </span>
         <span id="w_228" class="ocr_word" title="bbox 1998 1922 2061 1966">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">HI</ins>
-            <del title="nlp 0.90">HI</del>
+            <ins title="nlp 2.00">III</ins>
           </span>
         </span>
       </span>
@@ -1767,9 +1745,14 @@
             <del title="nlp 0.90">Ciceronem</del>
           </span>
         </span>
-        <span id="w_290" class="ocr_word" title="bbox 626 2421 1021 2477">
+        <span id="w_290_0" class="ocr_word" title="bbox 626 2421 1021 2477">
           <span class="alternatives">
-            <ins title="nlp 2.00">„praemeditandi"</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_290_1" class="ocr_word" title="bbox 626 2421 1021 2477">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">,,praemeditandi“</ins>
           </span>
         </span>
         <span id="w_291" class="ocr_word" title="bbox 1069 2436 1172 2464">
@@ -1794,12 +1777,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">esse</ins>
             <del title="nlp 0.90">esse</del>
-          </span>
-        </span>
-        <span id="w_295" class="ocr_word" title="bbox 1886 2424 2066 2463">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">testetur</ins>
-            <del title="nlp 0.90">testetur</del>
           </span>
         </span>
       </span>
@@ -1990,8 +1967,7 @@
         </span>
         <span id="w_329" class="ocr_word" title="bbox 651 2710 792 2749">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">niotae</ins>
-            <del title="nlp 0.90">niotae</del>
+            <ins title="nlp 2.00">motae</ins>
           </span>
         </span>
         <span id="w_330" class="ocr_word" title="bbox 824 2709 923 2749">
