--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0025.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0025.html
@@ -18,8 +18,7 @@
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1878 150 1997 189">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XXni</ins>
-            <del title="nlp 0.90">XXni</del>
+            <ins title="nlp 2.00">XXIII</ins>
           </span>
         </span>
       </span>
@@ -60,7 +59,7 @@
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1231 256 1315 300" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κα[</ins>
+            <ins title="nlp 2.00">καὶ.</ins>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1377 257 1528 314">
@@ -71,14 +70,12 @@
         </span>
         <span id="w_10" class="ocr_word" title="bbox 1567 259 1730 302">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">duHbus</ins>
-            <del title="nlp 0.90">duHbus</del>
+            <ins title="nlp 2.00">duabus</ins>
           </span>
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1763 259 1829 303">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">hin</ins>
-            <del title="nlp 0.90">hin</del>
+            <ins title="nlp 2.00">his</ins>
           </span>
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1861 263 1994 304">
@@ -366,8 +363,7 @@
         </span>
         <span id="w_64" class="ocr_word" title="bbox 1873 546 1991 588">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Bedes</ins>
-            <del title="nlp 0.90">Bedes</del>
+            <ins title="nlp 2.00">sedes</ins>
           </span>
         </span>
       </span>
@@ -1121,8 +1117,7 @@
         </span>
         <span id="w_192" class="ocr_word" title="bbox 1082 1474 1226 1530">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">raagni</ins>
-            <del title="nlp 0.90">raagni</del>
+            <ins title="nlp 2.00">magni</ins>
           </span>
         </span>
         <span id="w_193" class="ocr_word" title="bbox 1253 1475 1354 1516">
@@ -1189,13 +1184,12 @@
         </span>
         <span id="w_203" class="ocr_word" title="bbox 1039 1544 1138 1602" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἐφ᾿</ins>
+            <ins title="nlp 2.00">ἐφ᾿</ins>
           </span>
         </span>
         <span id="w_204" class="ocr_word" title="bbox 1157 1561 1191 1588">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">a</ins>
-            <del title="nlp 0.90">a</del>
+            <ins title="nlp 2.00">ᾧ</ins>
           </span>
         </span>
         <span id="w_205" class="ocr_word" title="bbox 1229 1548 1414 1601" lang="grc">
@@ -1607,9 +1601,14 @@
             <ins class="alt" title="nlp 1.00">καθάπερ</ins>
           </span>
         </span>
-        <span id="w_277" class="ocr_word" title="bbox 1250 2048 1407 2098" lang="grc">
+        <span id="w_277_0" class="ocr_word" title="bbox 1250 2048 1407 2098">
           <span class="alternatives">
-            <ins title="nlp 2.00">αὐτοῦ</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_277_1" class="ocr_word" title="bbox 1250 2048 1407 2098">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">αὐτὸς</ins>
           </span>
         </span>
         <span id="w_278" class="ocr_word" title="bbox 1438 2052 1603 2091" lang="grc">
@@ -1620,11 +1619,6 @@
         <span id="w_279" class="ocr_word" title="bbox 1628 2048 1873 2105" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὀνομάζειν,</ins>
-          </span>
-        </span>
-        <span id="w_280" class="ocr_word" title="bbox 1898 2049 1980 2104" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τὴν</ins>
           </span>
         </span>
       </span>
@@ -1882,14 +1876,14 @@
             <ins class="alt" title="nlp 1.00">κατὰ</ins>
           </span>
         </span>
-        <span id="w_327" class="ocr_word" title="bbox 581 2403 708 2455" lang="grc">
+        <span id="w_327_0" class="ocr_word" title="bbox 581 2403 708 2455">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀξίαν</ins>
+            <ins class="alt" title="nlp 2.00">ἀξίαν</ins>
           </span>
         </span>
-        <span id="w_328" class="ocr_word" title="bbox 739 2399 854 2447" lang="grc">
+        <span id="w_327_1" class="ocr_word" title="bbox 581 2403 708 2455">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρόντων</ins>
+            <ins class="alt" title="nlp 2.00">εἶναι</ins>
           </span>
         </span>
         <span id="w_329" class="ocr_word" title="bbox 889 2407 1122 2461" lang="grc">
@@ -2003,7 +1997,7 @@
         </span>
         <span id="w_350" class="ocr_word" title="bbox 1455 2549 1581 2607" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δόξα</ins>
+            <ins title="nlp 2.00">(δόξα</ins>
           </span>
         </span>
         <span id="w_351" class="ocr_word" title="bbox 1611 2563 1868 2606" lang="grc">
@@ -2061,8 +2055,7 @@
         </span>
         <span id="w_361" class="ocr_word" title="bbox 1621 2622 1858 2676">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">inventum,</ins>
-            <del title="nlp 0.90">inventum,</del>
+            <ins title="nlp 2.00">inventam,</ins>
           </span>
         </span>
         <span id="w_362" class="ocr_word" title="bbox 1898 2621 1971 2664">
@@ -2111,8 +2104,7 @@
         </span>
         <span id="w_369" class="ocr_word" title="bbox 1389 2696 1435 2735">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iit</ins>
-            <del title="nlp 0.90">iit</del>
+            <ins title="nlp 2.00">ut</ins>
           </span>
         </span>
         <span id="w_370" class="ocr_word" title="bbox 1461 2693 1644 2736">
@@ -2161,8 +2153,7 @@
         </span>
         <span id="w_377" class="ocr_word" title="bbox 1351 2764 1464 2807">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lUud</ins>
-            <del title="nlp 0.90">lUud</del>
+            <ins title="nlp 2.00">Illud</ins>
           </span>
         </span>
         <span id="w_378" class="ocr_word" title="bbox 1496 2766 1608 2808">
@@ -2171,9 +2162,9 @@
             <del title="nlp 0.90">enim</del>
           </span>
         </span>
-        <span id="w_379" class="ocr_word" title="bbox 1647 2765 1971 2822" lang="grc">
+        <span id="w_379_0" class="ocr_word" title="bbox 1647 2765 1971 2822">
           <span class="alternatives">
-            <ins title="nlp 2.00">,, πρόσφατος “,</ins>
+            <ins class="alt" title="nlp 2.00">,,πρόσφαος“,</ins>
           </span>
         </span>
       </span>
@@ -2365,8 +2356,7 @@
         </span>
         <span id="w_411" class="ocr_word" title="bbox 495 3049 697 3104">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">expUcari</ins>
-            <del title="nlp 0.90">expUcari</del>
+            <ins title="nlp 2.00">explicari</ins>
           </span>
         </span>
         <span id="w_412" class="ocr_word" title="bbox 729 3050 781 3092">
