--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0005.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0005.html
@@ -26,8 +26,7 @@
       <span class="ocr_line" title="bbox 680 778 1398 862">
         <span id="w_2" class="ocr_word" title="bbox 680 778 1398 862">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">FRAGMENTA</ins>
-            <del title="nlp 0.90">FRAGMENTA</del>
+            <ins title="nlp 2.00">FRAGMENTA</ins>
           </span>
         </span>
       </span>
@@ -42,8 +41,7 @@
       <span class="ocr_line" title="bbox 672 1164 1402 1212">
         <span id="w_4" class="ocr_word" title="bbox 672 1164 997 1212">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lOANNES</ins>
-            <del title="nlp 0.90">lOANNES</del>
+            <ins title="nlp 2.00">lOANNES</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 1030 1164 1121 1211">
@@ -94,8 +92,7 @@
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1182 1550 1511 1592">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">DISCIPVLI</ins>
-            <del title="nlp 0.90">DISCIPVLI</del>
+            <ins title="nlp 2.00">DISCIPVLI</ins>
           </span>
         </span>
       </span>
@@ -128,8 +125,7 @@
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1192 1901 1350 1938">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(MCMV)</ins>
-            <del title="nlp 0.90">(MCMV</del>
+            <ins title="nlp 2.00">(MCMV)</ins>
           </span>
         </span>
       </span>
@@ -166,14 +162,12 @@
         </span>
         <span id="w_23" class="ocr_word" title="bbox 1236 3099 1566 3141">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TEVBNERI</ins>
-            <del title="nlp 0.90">TEVBNERI</del>
+            <ins title="nlp 2.00">TEVBNERI</ins>
           </span>
         </span>
         <span id="w_24" class="ocr_word" title="bbox 1600 3098 1901 3141">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">MCMLXIV</ins>
-            <del title="nlp 0.90">MCMLXIV</del>
+            <ins title="nlp 2.00">MCMLXIV</ins>
           </span>
         </span>
       </span>
