--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0026.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0026.html
@@ -339,7 +339,7 @@
         </span>
         <span id="w_55" class="ocr_word" title="bbox 1162 631 1248 680" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅτι</ins>
+            <ins title="nlp 2.00">(ὅτι</ins>
           </span>
         </span>
         <span id="w_56" class="ocr_word" title="bbox 1281 632 1329 676" lang="grc">
@@ -434,18 +434,13 @@
             <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
-        <span id="w_74" class="ocr_word" title="bbox 1956 711 2068 763" lang="grc">
+        <span id="w_74_0" class="ocr_word" title="bbox 1956 711 2068 763">
           <span class="alternatives">
-            <ins title="nlp 2.00">Χρύσιππος</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 335 772 2068 834">
-        <span id="w_76" class="ocr_word" title="bbox 503 799 556 805" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—μαρτυρεῖ</ins>
-          </span>
-        </span>
         <span id="w_77" class="ocr_word" title="bbox 807 772 915 831">
           <span class="alternatives">
             <ins title="nlp 2.00">etc).</ins>
@@ -942,8 +937,7 @@
         </span>
         <span id="w_158" class="ocr_word" title="bbox 1382 1345 1675 1388">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coUectionem</ins>
-            <del title="nlp 0.90">coUectionem</del>
+            <ins title="nlp 2.00">collectionem</ins>
           </span>
         </span>
         <span id="w_159" class="ocr_word" title="bbox 1706 1344 1802 1388">
@@ -1911,9 +1905,14 @@
             <del title="nlp 0.90">earum,</del>
           </span>
         </span>
-        <span id="w_320" class="ocr_word" title="bbox 799 2556 992 2616">
+        <span id="w_320_0" class="ocr_word" title="bbox 799 2556 992 2616">
           <span class="alternatives">
-            <ins title="nlp 2.00">„magni"</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_320_1" class="ocr_word" title="bbox 799 2556 992 2616">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">,,magni“</ins>
           </span>
         </span>
         <span id="w_321" class="ocr_word" title="bbox 1022 2557 1147 2613">
@@ -1928,26 +1927,19 @@
             <del title="nlp 0.90">(quod</del>
           </span>
         </span>
-        <span id="w_323" class="ocr_word" title="bbox 1354 2557 1506 2613">
+        <span id="w_323_0" class="ocr_word" title="bbox 1354 2557 1506 2613">
           <span class="alternatives">
-            <ins title="nlp 2.00">„boni"</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_324" class="ocr_word" title="bbox 1543 2556 1609 2601">
+        <span id="w_323_1" class="ocr_word" title="bbox 1354 2557 1506 2613">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">vel</ins>
-            <del title="nlp 0.90">vel</del>
+            <ins class="alt" title="nlp 2.00">,,boni“</ins>
           </span>
         </span>
-        <span id="w_325" class="ocr_word" title="bbox 1645 2556 1796 2612">
+        <span id="w_324_0" class="ocr_word" title="bbox 1543 2556 1609 2601">
           <span class="alternatives">
-            <ins title="nlp 2.00">„mali"</ins>
-          </span>
-        </span>
-        <span id="w_326" class="ocr_word" title="bbox 1831 2556 2078 2600">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">notionibus</ins>
-            <del title="nlp 0.90">notionibus</del>
+            <ins class="alt" title="nlp 2.00">vel</ins>
           </span>
         </span>
       </span>
@@ -2315,9 +2307,14 @@
             <del title="nlp 0.90">Stobaeum</del>
           </span>
         </span>
-        <span id="w_389" class="ocr_word" title="bbox 947 3058 1033 3102">
+        <span id="w_389_0" class="ocr_word" title="bbox 947 3058 1033 3102">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">117</ins>
+            <ins class="alt" title="nlp 2.00">II</ins>
+          </span>
+        </span>
+        <span id="w_389_1" class="ocr_word" title="bbox 947 3058 1033 3102">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">7</ins>
           </span>
         </span>
         <span id="w_390" class="ocr_word" title="bbox 1066 3074 1106 3115">
@@ -2377,15 +2374,14 @@
             <ins class="alt" title="nlp 1.00">αἴτιον</ins>
           </span>
         </span>
-        <span id="w_401" class="ocr_word" title="bbox 872 3131 897 3172" lang="grc">
+        <span id="w_401_0" class="ocr_word" title="bbox 872 3131 897 3172">
           <span class="alternatives">
-            <ins title="nlp 2.00">σ᾿</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_402" class="ocr_word" title="bbox 909 3129 919 3146">
+        <span id="w_401_1" class="ocr_word" title="bbox 872 3131 897 3172">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins class="alt" title="nlp 2.00">δ᾿</ins>
           </span>
         </span>
         <span id="w_403" class="ocr_word" title="bbox 938 3129 1073 3185" lang="grc">
@@ -2411,11 +2407,6 @@
         <span id="w_407" class="ocr_word" title="bbox 1695 3128 1831 3170" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κακὸν</ins>
-          </span>
-        </span>
-        <span id="w_408" class="ocr_word" title="bbox 1861 3143 2079 3184" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παρεῖναι,</ins>
           </span>
         </span>
       </span>
