--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0027.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0027.html
@@ -12,12 +12,12 @@
       <span class="ocr_line" title="bbox 956 134 1963 171">
         <span id="w_0" class="ocr_word" title="bbox 956 137 1221 171">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">riiA*:KATIO</ins>
+            <ins title="nlp 2.00">PRAEFATIO</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1862 134 1963 171" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ΧΧ</ins>
+            <ins title="nlp 2.00">XXV</ins>
           </span>
         </span>
       </span>
@@ -54,9 +54,14 @@
             <del title="nlp 0.90">hic</del>
           </span>
         </span>
-        <span id="w_8" class="ocr_word" title="bbox 1240 245 1565 300" lang="grc">
+        <span id="w_8_0" class="ocr_word" title="bbox 1240 245 1565 300">
           <span class="alternatives">
-            <ins title="nlp 2.00">,, πρόσφατος “</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_8_1" class="ocr_word" title="bbox 1240 245 1565 300">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">,,πρόσφατος“,</ins>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1599 244 1714 301">
@@ -69,11 +74,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ad</ins>
             <del title="nlp 0.90">ad</del>
-          </span>
-        </span>
-        <span id="w_11" class="ocr_word" title="bbox 1828 244 1964 295" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δόξαν</ins>
           </span>
         </span>
       </span>
@@ -110,25 +110,22 @@
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1207 330 1311 360">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">yoce</ins>
-            <del title="nlp 0.90">yoce</del>
+            <ins title="nlp 2.00">voce</ins>
           </span>
         </span>
-        <span id="w_18" class="ocr_word" title="bbox 1354 317 1547 370" lang="grc">
+        <span id="w_18_0" class="ocr_word" title="bbox 1354 317 1547 370">
           <span class="alternatives">
-            <ins title="nlp 2.00">,, κακόν “</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_18_1" class="ocr_word" title="bbox 1354 317 1547 370">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">,,κακόν“</ins>
           </span>
         </span>
         <span id="w_19" class="ocr_word" title="bbox 1579 316 1854 360">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">conianctuin</ins>
-            <del title="nlp 0.90">conianctuin</del>
-          </span>
-        </span>
-        <span id="w_20" class="ocr_word" title="bbox 1888 319 1963 358">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">est.</ins>
-            <del title="nlp 0.90">est.</del>
+            <ins title="nlp 2.00">coniuntum</ins>
           </span>
         </span>
       </span>
@@ -280,16 +277,14 @@
         </span>
         <span id="w_46" class="ocr_word" title="bbox 1673 529 1964 588">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ChryBippum</ins>
-            <del title="nlp 0.90">ChryBippum</del>
+            <ins title="nlp 2.00">Chrysippum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 219 602 1962 660">
         <span id="w_47" class="ocr_word" title="bbox 219 604 340 660">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quaai</ins>
-            <del title="nlp 0.90">quaai</del>
+            <ins title="nlp 2.00">quasi</ins>
           </span>
         </span>
         <span id="w_48" class="ocr_word" title="bbox 373 603 558 646">
@@ -403,8 +398,7 @@
       <span class="ocr_line" title="bbox 219 744 1965 803">
         <span id="w_66" class="ocr_word" title="bbox 219 747 292 791">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Bed</ins>
-            <del title="nlp 0.90">Bed</del>
+            <ins title="nlp 2.00">sed</ins>
           </span>
         </span>
         <span id="w_67" class="ocr_word" title="bbox 311 761 398 790">
@@ -427,8 +421,7 @@
         </span>
         <span id="w_70" class="ocr_word" title="bbox 769 746 987 802">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">expreBBit.</ins>
-            <del title="nlp 0.90">expreBBit.</del>
+            <ins title="nlp 2.00">expressit.</ins>
           </span>
         </span>
         <span id="w_71" class="ocr_word" title="bbox 1050 744 1191 789">
@@ -519,8 +512,7 @@
         </span>
         <span id="w_85" class="ocr_word" title="bbox 1574 815 1804 872">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">CiceroniB,</ins>
-            <del title="nlp 0.90">CiceroniB,</del>
+            <ins title="nlp 2.00">Cicerunis,</ins>
           </span>
         </span>
         <span id="w_86" class="ocr_word" title="bbox 1836 832 1964 874">
@@ -539,8 +531,7 @@
         </span>
         <span id="w_88" class="ocr_word" title="bbox 301 889 563 933">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">diverBorum</ins>
-            <del title="nlp 0.90">diverBorum</del>
+            <ins title="nlp 2.00">diversorum</ins>
           </span>
         </span>
         <span id="w_89" class="ocr_word" title="bbox 595 889 780 932">
@@ -601,8 +592,7 @@
         </span>
         <span id="w_98" class="ocr_word" title="bbox 262 961 501 1019">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Chryflippo</ins>
-            <del title="nlp 0.90">Chryflippo</del>
+            <ins title="nlp 2.00">Chrysippo</ins>
           </span>
         </span>
         <span id="w_99" class="ocr_word" title="bbox 528 960 749 1005">
@@ -623,15 +613,14 @@
             <del title="nlp 0.90">diecrepant,</del>
           </span>
         </span>
-        <span id="w_102" class="ocr_word" title="bbox 1370 961 1484 1017">
+        <span id="w_102_0" class="ocr_word" title="bbox 1370 961 1484 1017">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quod</ins>
-            <del title="nlp 0.90">quod</del>
+            <ins class="alt" title="nlp 2.00">quod</ins>
           </span>
         </span>
-        <span id="w_103" class="ocr_word" title="bbox 1516 961 1827 1017" lang="grc">
+        <span id="w_102_1" class="ocr_word" title="bbox 1370 961 1484 1017">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,πρόσφατος “</ins>
+            <ins class="alt" title="nlp 2.00">,,πρόσφατος “</ins>
           </span>
         </span>
         <span id="w_104" class="ocr_word" title="bbox 1860 960 1966 1005">
@@ -703,9 +692,14 @@
             <del title="nlp 0.90">mali</del>
           </span>
         </span>
-        <span id="w_115" class="ocr_word" title="bbox 350 1104 628 1162">
+        <span id="w_115_0" class="ocr_word" title="bbox 350 1104 628 1162">
           <span class="alternatives">
-            <ins title="nlp 2.00">praesentis“)</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_115_1" class="ocr_word" title="bbox 350 1104 628 1162">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">praesentis“)</ins>
           </span>
         </span>
         <span id="w_116" class="ocr_word" title="bbox 661 1107 809 1161">
@@ -749,12 +743,6 @@
             <del title="nlp 0.90">talis</del>
           </span>
         </span>
-        <span id="w_123" class="ocr_word" title="bbox 1866 1105 1966 1147">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mali</ins>
-            <del title="nlp 0.90">mali</del>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 220 1175 1964 1233">
         <span id="w_124" class="ocr_word" title="bbox 220 1181 264 1220">
@@ -795,8 +783,7 @@
         </span>
         <span id="w_130" class="ocr_word" title="bbox 979 1176 1115 1233">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’’,</ins>
-            <del title="nlp 0.90">’’,</del>
+            <ins title="nlp 2.00">angi“,</ins>
           </span>
         </span>
         <span id="w_131" class="ocr_word" title="bbox 1146 1191 1170 1218">
@@ -875,8 +862,7 @@
         </span>
         <span id="w_143" class="ocr_word" title="bbox 1391 1248 1568 1291">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">afPectus</ins>
-            <del title="nlp 0.90">afPectus</del>
+            <ins title="nlp 2.00">affectus</ins>
           </span>
         </span>
         <span id="w_144" class="ocr_word" title="bbox 1612 1262 1698 1291">
@@ -996,15 +982,14 @@
             <ins title="nlp 2.00">affecturs,</ins>
           </span>
         </span>
-        <span id="w_163" class="ocr_word" title="bbox 1662 1390 1857 1444">
+        <span id="w_163_0" class="ocr_word" title="bbox 1662 1390 1857 1444">
           <span class="alternatives">
-            <ins title="nlp 2.00">,, recens “</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_164" class="ocr_word" title="bbox 1883 1390 1965 1433">
+        <span id="w_163_1" class="ocr_word" title="bbox 1662 1390 1857 1444">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dici</ins>
-            <del title="nlp 0.90">dici</del>
+            <ins class="alt" title="nlp 2.00">,,recens“</ins>
           </span>
         </span>
       </span>
@@ -1135,8 +1120,7 @@
         </span>
         <span id="w_187" class="ocr_word" title="bbox 1886 1531 1966 1576">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Dla</ins>
-            <del title="nlp 0.90">Dla</del>
+            <ins title="nlp 2.00">Illa</ins>
           </span>
         </span>
       </span>
@@ -1444,17 +1428,11 @@
         </span>
         <span id="w_240" class="ocr_word" title="bbox 1879 1906 1967 1934">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ma-</ins>
+            <ins title="nlp 2.00">malum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 215 1964 1966 2023">
-        <span id="w_241" class="ocr_word" title="bbox 215 1967 304 2009">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lura</ins>
-            <del title="nlp 0.90">malura</del>
-          </span>
-        </span>
         <span id="w_242" class="ocr_word" title="bbox 337 1965 484 2009">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">adesse</ins>
@@ -1475,7 +1453,7 @@
         </span>
         <span id="w_245" class="ocr_word" title="bbox 771 1965 1002 2009">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">videatur."</ins>
+            <ins title="nlp 2.00">videatur.“</ins>
           </span>
         </span>
         <span id="w_246" class="ocr_word" title="bbox 1064 1964 1183 2007">
@@ -1656,8 +1634,7 @@
         </span>
         <span id="w_276" class="ocr_word" title="bbox 996 2182 1039 2225">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iii</ins>
-            <del title="nlp 0.90">iii</del>
+            <ins title="nlp 2.00">in</ins>
           </span>
         </span>
         <span id="w_277" class="ocr_word" title="bbox 1071 2181 1366 2239">
@@ -1680,8 +1657,7 @@
         </span>
         <span id="w_280" class="ocr_word" title="bbox 1731 2180 1964 2235">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">plurimura</ins>
-            <del title="nlp 0.90">plurimura</del>
+            <ins title="nlp 2.00">plurimum</ins>
           </span>
         </span>
       </span>
@@ -1747,16 +1723,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 216 2322 1965 2382">
-        <span id="w_291" class="ocr_word" title="bbox 216 2325 528 2382">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">prehendimus.</ins>
-            <del title="nlp 0.90">deprehendimus.</del>
-          </span>
-        </span>
         <span id="w_292" class="ocr_word" title="bbox 590 2324 706 2369">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Idera</ins>
-            <del title="nlp 0.90">Idera</del>
+            <ins title="nlp 2.00">Idem</ins>
           </span>
         </span>
         <span id="w_293" class="ocr_word" title="bbox 740 2325 996 2382">
@@ -1779,8 +1748,7 @@
         </span>
         <span id="w_296" class="ocr_word" title="bbox 1273 2325 1435 2368">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">raaiora</ins>
-            <del title="nlp 0.90">raaiora</del>
+            <ins title="nlp 2.00">maiora</ins>
           </span>
         </span>
         <span id="w_297" class="ocr_word" title="bbox 1465 2323 1600 2367">
@@ -1916,15 +1884,14 @@
             <del title="nlp 0.90">non</del>
           </span>
         </span>
-        <span id="w_319" class="ocr_word" title="bbox 1598 2465 1778 2526">
+        <span id="w_319_0" class="ocr_word" title="bbox 1598 2465 1778 2526">
           <span class="alternatives">
-            <ins title="nlp 2.00">“).</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_320" class="ocr_word" title="bbox 1841 2465 1965 2519">
+        <span id="w_319_1" class="ocr_word" title="bbox 1598 2465 1778 2526">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Quod</ins>
-            <del title="nlp 0.90">Quod</del>
+            <ins class="alt" title="nlp 2.00">datur“).</ins>
           </span>
         </span>
       </span>
@@ -2084,8 +2051,7 @@
         </span>
         <span id="w_347" class="ocr_word" title="bbox 1768 2682 1964 2725">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">horaines</ins>
-            <del title="nlp 0.90">horaines</del>
+            <ins title="nlp 2.00">homines</ins>
           </span>
         </span>
       </span>
@@ -2186,8 +2152,7 @@
         </span>
         <span id="w_364" class="ocr_word" title="bbox 1045 2829 1205 2872">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">malura</ins>
-            <del title="nlp 0.90">malura</del>
+            <ins title="nlp 2.00">malum</ins>
           </span>
         </span>
         <span id="w_365" class="ocr_word" title="bbox 1234 2828 1348 2884">
@@ -2210,8 +2175,7 @@
         </span>
         <span id="w_368" class="ocr_word" title="bbox 1718 2826 1966 2879">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">raaximura,</ins>
-            <del title="nlp 0.90">raaximura,</del>
+            <ins title="nlp 2.00">maximum,</ins>
           </span>
         </span>
       </span>
@@ -2258,15 +2222,14 @@
             <del title="nlp 0.90">possit</del>
           </span>
         </span>
-        <span id="w_376" class="ocr_word" title="bbox 1556 2897 1780 2941">
+        <span id="w_376_0" class="ocr_word" title="bbox 1556 2897 1780 2941">
           <span class="alternatives">
-            <ins title="nlp 2.00">“</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_377" class="ocr_word" title="bbox 1839 2896 1966 2939">
+        <span id="w_376_1" class="ocr_word" title="bbox 1556 2897 1780 2941">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Patet</ins>
-            <del title="nlp 0.90">Patet</del>
+            <ins class="alt" title="nlp 2.00">evertere.“</ins>
           </span>
         </span>
       </span>
@@ -2279,8 +2242,7 @@
         </span>
         <span id="w_379" class="ocr_word" title="bbox 357 2972 595 3016">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">doctrinara</ins>
-            <del title="nlp 0.90">doctrinara</del>
+            <ins title="nlp 2.00">doctrinam</ins>
           </span>
         </span>
         <span id="w_380" class="ocr_word" title="bbox 627 2972 938 3015">
@@ -2291,8 +2253,7 @@
         </span>
         <span id="w_381" class="ocr_word" title="bbox 971 2986 1100 3028">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quara</ins>
-            <del title="nlp 0.90">quara</del>
+            <ins title="nlp 2.00">quam</ins>
           </span>
         </span>
         <span id="w_382" class="ocr_word" title="bbox 1133 2987 1260 3027">
@@ -2303,8 +2264,7 @@
         </span>
         <span id="w_383" class="ocr_word" title="bbox 1293 2970 1641 3014">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">adumbraviraus</ins>
-            <del title="nlp 0.90">adumbraviraus</del>
+            <ins title="nlp 2.00">adumbravimus</ins>
           </span>
         </span>
         <span id="w_384" class="ocr_word" title="bbox 1675 2983 1766 3012">
@@ -2328,8 +2288,7 @@
         </span>
         <span id="w_388" class="ocr_word" title="bbox 471 3044 583 3087">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">enira</ins>
-            <del title="nlp 0.90">enira</del>
+            <ins title="nlp 2.00">enim</ins>
           </span>
         </span>
         <span id="w_389" class="ocr_word" title="bbox 617 3044 968 3087">
@@ -2346,29 +2305,26 @@
         </span>
         <span id="w_391" class="ocr_word" title="bbox 1076 3044 1423 3086">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">exercitationera</ins>
-            <del title="nlp 0.90">exercitationera</del>
+            <ins title="nlp 2.00">exercitationem</ins>
           </span>
         </span>
         <span id="w_392" class="ocr_word" title="bbox 1458 3056 1606 3084">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cuusas</ins>
-            <del title="nlp 0.90">cuusas</del>
+            <ins title="nlp 2.00">causas</ins>
           </span>
         </span>
-        <span id="w_393" class="ocr_word" title="bbox 1639 3041 1841 3083">
+        <span id="w_393_0" class="ocr_word" title="bbox 1639 3041 1841 3083">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">attulerat</ins>
-            <del title="nlp 0.90">attulerat</del>
+            <ins class="alt" title="nlp 2.00">attulerat</ins>
+          </span>
+        </span>
+        <span id="w_393_1" class="ocr_word" title="bbox 1639 3041 1841 3083">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">perturbationis</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 216 3111 1966 3173">
-        <span id="w_395" class="ocr_word" title="bbox 216 3115 471 3158">
-          <span class="alternatives">
-            <ins title="nlp 2.00">perturbationis</ins>
-          </span>
-        </span>
         <span id="w_396" class="ocr_word" title="bbox 528 3115 907 3171">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">praemeditatione</ins>
