--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0030.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0030.html
@@ -12,8 +12,7 @@
       <span class="ocr_line" title="bbox 266 109 1264 147">
         <span id="w_0" class="ocr_word" title="bbox 266 109 419 146">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XXVm</ins>
-            <del title="nlp 0.90">XXVm</del>
+            <ins title="nlp 2.00">XXVIII</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1001 113 1264 147">
@@ -106,8 +105,7 @@
         </span>
         <span id="w_15" class="ocr_word" title="bbox 1090 304 1181 332">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">esBe</ins>
-            <del title="nlp 0.90">esBe</del>
+            <ins title="nlp 2.00">esse</ins>
           </span>
         </span>
         <span id="w_16" class="ocr_word" title="bbox 1213 305 1390 345">
@@ -209,15 +207,14 @@
             <del title="nlp 0.90">nos</del>
           </span>
         </span>
-        <span id="w_33" class="ocr_word" title="bbox 633 431 863 473">
+        <span id="w_33_0" class="ocr_word" title="bbox 633 431 863 473">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">admonent</ins>
-            <del title="nlp 0.90">admonent</del>
+            <ins class="alt" title="nlp 2.00">admonent</ins>
           </span>
         </span>
-        <span id="w_34" class="ocr_word" title="bbox 896 429 939 487" lang="grc">
+        <span id="w_33_1" class="ocr_word" title="bbox 633 431 863 473">
           <span class="alternatives">
-            <ins title="nlp 2.00">§</ins>
+            <ins class="alt" title="nlp 2.00">(§</ins>
           </span>
         </span>
         <span id="w_35" class="ocr_word" title="bbox 966 430 1022 473">
@@ -230,9 +227,14 @@
             <ins title="nlp 2.00">in):</ins>
           </span>
         </span>
-        <span id="w_37" class="ocr_word" title="bbox 1160 430 1327 486">
+        <span id="w_37_0" class="ocr_word" title="bbox 1160 430 1327 486">
           <span class="alternatives">
-            <ins title="nlp 2.00">,, Ηabes</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_37_1" class="ocr_word" title="bbox 1160 430 1327 486">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">,,Habes</ins>
           </span>
         </span>
         <span id="w_38" class="ocr_word" title="bbox 1360 447 1419 486">
@@ -251,11 +253,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">de</ins>
             <del title="nlp 0.90">de</del>
-          </span>
-        </span>
-        <span id="w_41" class="ocr_word" title="bbox 1671 434 1996 488">
-          <span class="alternatives">
-            <ins title="nlp 2.00">perturbationibus</ins>
           </span>
         </span>
       </span>
@@ -309,9 +306,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 263 571 1996 629">
-        <span id="w_52" class="ocr_word" title="bbox 365 572 601 616">
+        <span id="w_52_0" class="ocr_word" title="bbox 365 572 601 616">
           <span class="alternatives">
-            <ins title="nlp 2.00">subtilius."</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_52_1" class="ocr_word" title="bbox 365 572 601 616">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">subtilius.“</ins>
           </span>
         </span>
         <span id="w_53" class="ocr_word" title="bbox 660 572 795 629">
@@ -342,12 +344,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">de</ins>
             <del title="nlp 0.90">de</del>
-          </span>
-        </span>
-        <span id="w_58" class="ocr_word" title="bbox 1473 574 1862 629">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">perturbationibus</ins>
-            <del title="nlp 0.90">perturbationibus</del>
           </span>
         </span>
       </span>
@@ -743,9 +739,9 @@
             <del title="nlp 0.90">et</del>
           </span>
         </span>
-        <span id="w_125" class="ocr_word" title="bbox 1902 1157 1998 1185">
+        <span id="w_125_0" class="ocr_word" title="bbox 1902 1157 1998 1185">
           <span class="alternatives">
-            <ins title="nlp 2.00">malorum,"</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1176,8 +1172,7 @@
         </span>
         <span id="w_198" class="ocr_word" title="bbox 1561 1637 1726 1680">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TuUius</ins>
-            <del title="nlp 0.90">TuUius</del>
+            <ins title="nlp 2.00">Tullius</ins>
           </span>
         </span>
         <span id="w_199" class="ocr_word" title="bbox 1757 1653 1807 1680">
@@ -2332,9 +2327,14 @@
             <ins title="nlp 2.00">nullo </ins>
           </span>
         </span>
-        <span id="w_392" class="ocr_word" title="bbox 427 3061 590 3105">
+        <span id="w_392_0" class="ocr_word" title="bbox 427 3061 590 3105">
           <span class="alternatives">
-            <ins title="nlp 2.00">modo."</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_392_1" class="ocr_word" title="bbox 427 3061 590 3105">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">modo.“</ins>
           </span>
         </span>
         <span id="w_393" class="ocr_word" title="bbox 657 3060 767 3105">
@@ -2359,12 +2359,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">dissensum</ins>
             <del title="nlp 0.90">dissensum</del>
-          </span>
-        </span>
-        <span id="w_397" class="ocr_word" title="bbox 1619 3060 1990 3119">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">doxographorum</ins>
-            <del title="nlp 0.90">doxographorum</del>
           </span>
         </span>
       </span>
