--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0031.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0031.html
@@ -18,8 +18,7 @@
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1849 108 1964 146">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">yiXlX</ins>
-            <del title="nlp 0.90">yiXlX</del>
+            <ins title="nlp 2.00">XXIX</ins>
           </span>
         </span>
       </span>
@@ -92,8 +91,7 @@
         </span>
         <span id="w_13" class="ocr_word" title="bbox 330 290 616 348">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Chrjsippum</ins>
-            <del title="nlp 0.90">Chrjsippum</del>
+            <ins title="nlp 2.00">Chrysippum</ins>
           </span>
         </span>
         <span id="w_14" class="ocr_word" title="bbox 649 294 690 333">
@@ -134,8 +132,7 @@
         </span>
         <span id="w_20" class="ocr_word" title="bbox 1898 304 1970 332">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">eoi</ins>
-            <del title="nlp 0.90">eoi</del>
+            <ins title="nlp 2.00">eos</ins>
           </span>
         </span>
       </span>
@@ -148,8 +145,7 @@
         </span>
         <span id="w_22" class="ocr_word" title="bbox 329 366 478 420">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">poBtea</ins>
-            <del title="nlp 0.90">poBtea</del>
+            <ins title="nlp 2.00">postea</ins>
           </span>
         </span>
         <span id="w_23" class="ocr_word" title="bbox 508 363 679 417">
@@ -166,14 +162,12 @@
         </span>
         <span id="w_25" class="ocr_word" title="bbox 840 360 1098 404">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Cameadem</ins>
-            <del title="nlp 0.90">Cameadem</del>
+            <ins title="nlp 2.00">Carneadem</ins>
           </span>
         </span>
         <span id="w_26" class="ocr_word" title="bbox 1133 362 1341 404">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Bustinere</ins>
-            <del title="nlp 0.90">Bustinere</del>
+            <ins title="nlp 2.00">sustinere</ins>
           </span>
         </span>
         <span id="w_27" class="ocr_word" title="bbox 1372 375 1459 403">
@@ -287,15 +281,14 @@
             <del title="nlp 0.90">vehementer</del>
           </span>
         </span>
-        <span id="w_45" class="ocr_word" title="bbox 1550 504 1795 558">
+        <span id="w_45_0" class="ocr_word" title="bbox 1550 504 1795 558">
           <span class="alternatives">
-            <ins title="nlp 2.00">assentior,"</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_46" class="ocr_word" title="bbox 1845 518 1971 559">
+        <span id="w_45_1" class="ocr_word" title="bbox 1550 504 1795 558">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quani</ins>
-            <del title="nlp 0.90">quani</del>
+            <ins class="alt" title="nlp 2.00">assentior,“</ins>
           </span>
         </span>
       </span>
@@ -468,8 +461,7 @@
         </span>
         <span id="w_76" class="ocr_word" title="bbox 839 790 1074 832">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Bententiae</ins>
-            <del title="nlp 0.90">Bententiae</del>
+            <ins title="nlp 2.00">sententiae</ins>
           </span>
         </span>
         <span id="w_77" class="ocr_word" title="bbox 1118 789 1374 831">
@@ -536,8 +528,7 @@
         </span>
         <span id="w_87" class="ocr_word" title="bbox 1727 860 1972 903">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ciceronem</ins>
-            <del title="nlp 0.90">Ciceronem</del>
+            <ins title="nlp 2.00">Ciceronem</ins>
           </span>
         </span>
       </span>
@@ -574,8 +565,7 @@
         </span>
         <span id="w_93" class="ocr_word" title="bbox 1300 931 1607 974">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dissensioncm</ins>
-            <del title="nlp 0.90">dissensioncm</del>
+            <ins title="nlp 2.00">dissensionem</ins>
           </span>
         </span>
         <span id="w_94" class="ocr_word" title="bbox 1635 932 1737 974">
@@ -687,9 +677,14 @@
             <del title="nlp 0.90">voluptatem</del>
           </span>
         </span>
-        <span id="w_112" class="ocr_word" title="bbox 1116 1074 1393 1130">
+        <span id="w_112_0" class="ocr_word" title="bbox 1116 1074 1393 1130">
           <span class="alternatives">
-            <ins title="nlp 2.00">ponendam, “</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_112_1" class="ocr_word" title="bbox 1116 1074 1393 1130">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ponendam,“</ins>
           </span>
         </span>
         <span id="w_113" class="ocr_word" title="bbox 1426 1089 1534 1129">
@@ -704,17 +699,11 @@
             <del title="nlp 0.90">adnectitur</del>
           </span>
         </span>
-        <span id="w_115" class="ocr_word" title="bbox 1836 1089 1974 1117">
-          <span class="alternatives">
-            <ins title="nlp 2.00">assensionis</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 226 1145 1974 1204">
         <span id="w_117" class="ocr_word" title="bbox 390 1148 660 1204">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">significatiO;</ins>
-            <del title="nlp 0.90">significatiO;</del>
+            <ins title="nlp 2.00">significatio,</ins>
           </span>
         </span>
         <span id="w_118" class="ocr_word" title="bbox 692 1162 784 1190">
@@ -766,9 +755,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 226 1218 1976 1275">
-        <span id="w_127" class="ocr_word" title="bbox 416 1233 494 1274">
+        <span id="w_127_0" class="ocr_word" title="bbox 416 1233 494 1274">
           <span class="alternatives">
-            <ins title="nlp 2.00">,, ne</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_127_1" class="ocr_word" title="bbox 416 1233 494 1274">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">,,ne</ins>
           </span>
         </span>
         <span id="w_128" class="ocr_word" title="bbox 526 1220 561 1261">
@@ -819,12 +813,6 @@
             <del title="nlp 0.90">videatur,</del>
           </span>
         </span>
-        <span id="w_136" class="ocr_word" title="bbox 1867 1233 1976 1274">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quae</ins>
-            <del title="nlp 0.90">quae</del>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 226 1289 1975 1347">
         <span id="w_137" class="ocr_word" title="bbox 226 1291 388 1347">
@@ -851,9 +839,14 @@
             <del title="nlp 0.90">turpia</del>
           </span>
         </span>
-        <span id="w_141" class="ocr_word" title="bbox 1067 1289 1333 1345">
+        <span id="w_141_0" class="ocr_word" title="bbox 1067 1289 1333 1345">
           <span class="alternatives">
-            <ins title="nlp 2.00">sequantur,"</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_141_1" class="ocr_word" title="bbox 1067 1289 1333 1345">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">sequantur,“</ins>
           </span>
         </span>
         <span id="w_142" class="ocr_word" title="bbox 1379 1304 1527 1344">
@@ -866,11 +859,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">subtiliter</ins>
             <del title="nlp 0.90">subtiliter</del>
-          </span>
-        </span>
-        <span id="w_144" class="ocr_word" title="bbox 1830 1290 1975 1333">
-          <span class="alternatives">
-            <ins title="nlp 2.00">adumbrata</ins>
           </span>
         </span>
       </span>
@@ -1438,8 +1426,7 @@
         </span>
         <span id="w_240" class="ocr_word" title="bbox 1843 2006 1971 2049">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fineni</ins>
-            <del title="nlp 0.90">fineni</del>
+            <ins title="nlp 2.00">finem</ins>
           </span>
         </span>
       </span>
@@ -1684,8 +1671,7 @@
       <span class="ocr_line" title="bbox 227 2363 1972 2421">
         <span id="w_281" class="ocr_word" title="bbox 227 2363 334 2407">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Cura</ins>
-            <del title="nlp 0.90">Cura</del>
+            <ins title="nlp 2.00">Cum</ins>
           </span>
         </span>
         <span id="w_282" class="ocr_word" title="bbox 367 2379 465 2407">
@@ -1756,15 +1742,14 @@
             <del title="nlp 0.90">Posidonio</del>
           </span>
         </span>
-        <span id="w_293" class="ocr_word" title="bbox 475 2461 482 2469">
+        <span id="w_293_0" class="ocr_word" title="bbox 475 2461 482 2469">
           <span class="alternatives">
-            <ins title="nlp 2.00">•</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_294" class="ocr_word" title="bbox 494 2450 580 2478">
+        <span id="w_293_1" class="ocr_word" title="bbox 475 2461 482 2469">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">non</ins>
-            <del title="nlp 0.90">non</del>
+            <ins class="alt" title="nlp 2.00">.non</ins>
           </span>
         </span>
         <span id="w_295" class="ocr_word" title="bbox 617 2450 743 2492">
@@ -1813,12 +1798,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">contra</ins>
             <del title="nlp 0.90">contra</del>
-          </span>
-        </span>
-        <span id="w_303" class="ocr_word" title="bbox 1890 2435 1972 2479">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dici</ins>
-            <del title="nlp 0.90">dici</del>
           </span>
         </span>
       </span>
@@ -1887,8 +1866,7 @@
         </span>
         <span id="w_314" class="ocr_word" title="bbox 745 2579 932 2622">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TuUium</ins>
-            <del title="nlp 0.90">TuUium</del>
+            <ins title="nlp 2.00">Tullium</ins>
           </span>
         </span>
         <span id="w_315" class="ocr_word" title="bbox 965 2593 1090 2622">
@@ -2287,8 +2265,7 @@
         </span>
         <span id="w_381" class="ocr_word" title="bbox 1053 3078 1346 3122">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coUectionem</ins>
-            <del title="nlp 0.90">coUectionem</del>
+            <ins title="nlp 2.00">collectionem</ins>
           </span>
         </span>
         <span id="w_382" class="ocr_word" title="bbox 1379 3082 1497 3121">
